Fix contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ background-size: cover;
 }
 
 .proj-tech p {
-  background-color: rgb(85, 77, 77);
+  background-color: rgb(53, 48, 48);
   font-size: 0.87rem;
   padding: 3px;
   font-family:sans-serif;
